# PlatformEngineerAssignment

./: .gitignore  README.md
docs/: diagram.excalidraw
pipelines/: README.md  pyproject.toml  requirements.txt
pipelines/dags/: daily_location_service.py
pipelines/scripts/: pubsub_infer_schema.py  pubsub_populate_location.py
pipelines/src/: batch_pipeline.py  streaming_pipeline.py
terraform/bootstrap/: .terraform.lock.hcl  00-encryption.tf  00-stages.tf  locals.tf  terraform.tfvars.sample  variables.tf
terraform/platform/: .terraform.lock.hcl  01-dropoff.tf  02-processing.tf  03-landing.tf  locals.tf  main.tf  terraform.tfvars.sample  variables.tf  versions.tf
