[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Danilo Mota <dqmota@gmail.com>"]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "^3.12"
apache-beam = {extras = ["gcp"], version = "^2.63.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"